@@ -87,6 +87,7 @@ Changes for v2.03
 - Support upgrades with keymoves for Input Raw of Device Upgrade Editor (Graham)
 - Remove the Set Baseline button of Raw Download panel as it serves no purpose (Graham)
 - Amend UpdateChecker to handle builds and to make the hyperlink work properly (Graham)
+- Fix bug erroneously preventing macros being put on shifted buttons in certain situations (Graham)
 
 Changes for v2.02
 -- Alpha --
